# object-detection

./: .gitignore  README.md  setup.cfg
src/: config.json  converter.py  process.py
src/config/: base_config.json
src/config/yolov2-coco/: config.json
src/config/yolov2-maskw/: config.json
src/config/yolov2-voc/: config.json
src/dataset/: __init__.py  augmentation.py  coco.py  dataloader.py  maskwearing.py  pascalvoc.py
src/function/: __init__.py  evaluate.py  inference.py  train.py  util.py
src/model/: __init__.py  base.py  layers.py  yolov2.py
tools/: convert_coco.py  convert_mask.py  convert_mask_wearing.py  convert_maskw.py  convert_pascal_voc.py  convert_voc.py  convert_weight.py  get_anchor.py
