[metadata]
name = yolo
version = 1.0.0
url = https://github.com/rs1004/yolo
author = Ryo S
author_email = r82.y25@gmail.com
license = MIT
description = yolo: Personal Python package
long_description = file: README.md

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src