[metadata]
name = yolo
version = 1.0.0
url = https://github.com/rs1004/yolo
author = Ryo S
author_email = r82.y25@gmail.com
license = MIT
description = yolo: Personal Python package
long_description = file: README.md

[options]
packages = find:
package_dir =
    = src
install_requires =
    absl-py==0.11.0
    cachetools==4.2.1
    certifi==2020.12.5
    chardet==4.0.0
    cycler==0.10.0
    google-auth==1.27.0
    google-auth-oauthlib==0.4.2
    grpcio==1.35.0
    idna==2.10
    kiwisolver==1.3.1
    Markdown==3.3.4
    matplotlib==3.3.4
    numpy==1.20.1
    oauthlib==3.1.0
    pandas==1.2.2
    Pillow==8.1.0
    protobuf==3.15.2
    pyasn1==0.4.8
    pyasn1-modules==0.2.8
    pyparsing==2.4.7
    python-dateutil==2.8.1
    pytz==2021.1
    requests==2.25.1
    requests-oauthlib==1.3.0
    rsa==4.7.2
    scipy==1.6.1
    seaborn==0.11.1
    six==1.15.0
    tabulate==0.8.9
    tensorboard==2.4.1
    tensorboard-plugin-wit==1.8.0
    torch==1.7.1
    torchaudio==0.7.2
    torchvision==0.8.2
    tqdm==4.57.0
    typing-extensions==3.7.4.3
    urllib3==1.26.3
    Werkzeug==1.0.1

[options.packages.find]
where = src